# CG-Final-Project-F

./: .gitignore  README.md  README.txt  SGPNLosses.py  Untitled.ipynb  computil.py  datasetutil.py  ioutil.py  kerasutil.py  layers.py  logger.py  modelshape.txt  modelutil.py  param.json  pointnet_util.py  run.py  sgpn.py  test.py
conf/modelnet40/: kp_conv.pyconf  point_cnn.pyconf  pointconv.pyconf  pointconv_base.pyconf
conf/modenet40/: KPConv.pyconf  pointcnn-x3-l4.pyconf
conf/sgpn/: sgpn.pyconf
conf/stanford_indoor3d/: conf.pyconf
cpp/: CMakeLists.txt
cpp/src/: fixed_radius_search.cpp
cpp/src/legacy/tf_neighbors/: tf_batch_neighbors.cpp  tf_neighbors.cpp
cpp/src/legacy/tf_neighbors/neighbors/: neighbors.cpp  neighbors.h
cpp/src/legacy/tf_subsampling/: tf_batch_subsampling.cpp  tf_subsampling.cpp
cpp/src/legacy/tf_subsampling/grid_subsampling/: grid_subsampling.cpp  grid_subsampling.h
kernels/dispositions/: k_015_center.ply
layers/: __init__.py  base.py  blocks.py  common.py  kpconv.py  neighbor.py  our_layer.py  pointconv.py  pooling.py  sampling.py  xconv.py
layers/tf_ops/3d_interpolation/: tf_interpolate_compile.sh
layers/tf_ops/grouping/: tf_grouping_compile.sh
layers/tf_ops/sampling/: 1.pkl  tf_sampling.py  tf_sampling_compile.sh
legacy/: kpconv.py  pointfly.py
legacy/utils/: ply.py
log/: log_train.txt  train.py
models/: pointnet2_cls_ssg.py
ops/: __init__.py
tf_ops/sampling/: tf_sampling.py  tf_sampling_compile.sh
unittest/: test.py  unittest.py
utils/: computil.py  confutil.py  datasetutil.py  ioutil.py  kerasutil.py  modelutil.py  pointnet_util_origin.py
